...
    if (workouts.isEmpty) {
      return Center(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            const Text(
              'Add your first workout!',
              style: TextStyle(fontSize: 18.0, fontWeight: FontWeight.bold),
            ),
            const SizedBox(
              height: 32.0,
            ),
            ElevatedButton(
...
                        borderRadius: BorderRadius.circular(120.0),
                        side: const BorderSide(color: Colors.blueGrey))),
                onPressed: () {
                  ref.read(editWorkoutManager).clear();
                  context.go('/workouts/workout');
                },
                child: const Text('Add'))
          ],
        ),
      );
    }

    return ListView.builder(
...
