...
            child: GridView(
                shrinkWrap: true,
                gridDelegate: const SliverGridDelegateWithFixedCrossAxisCount(
                    childAspectRatio: 4 / 3, crossAxisCount: 2),
                children: const [
                  GenderWidget(
                    name: 'Male',
                    icon: MdiIcons.genderMale,
                    color: Color(0xff2b9ef6),
                  ),
                  GenderWidget(
                      name: 'Female',
                      icon: MdiIcons.genderFemale,
...
